<resources>
    <string name="app_name">MedForm</string>

    <string name="action_settings">Ajustes de Sistema</string>
    <string name="action_print">Imprimir Receta</string>
    <string name="action_user_settings">Ajustes de Usuario</string>
    <string name="action_editar_paciente">Editar Paciente</string>
    <string name="action_eliminar_paciente">Eliminar Paciente</string>
    <string name="action_eliminar_receta">Eliminar Receta</string>
    <string name="action_nueva_receta">Nueva Receta</string>
    <string name="action_generar_receta">Generar Receta</string>
    <string name="Hola">Hola</string>

    <!-- Página de Inicio-->

    <string name="main_rut">Rut de Paciente</string>
    <string name="main_rutHint">xx.xxx.xxx-x</string>
    <string name="main_BuscarPaciente">Buscar Paciente</string>
    <string name="main_PacienteNoEncontrado">Paciente no encontrado</string>
    <string name="main_PacienteEncontrado">Paciente encontrado</string>
    <string name="main_CrearPaciente">Crear paciente</string>
    <string name="main_CrearReceta">Crear Receta</string>
    <!-- Formulario -->
    <string name="creaPaciente_Nombre">Nombre paciente</string>
    <string name="crearPaciente_Rut">Rut</string>
    <string name="crearPAciente_FechaNacimiento">Fecha de Nacimiento </string>
    <string name="crearPaciente_Sexo">Sexo</string>
    <string name="crearPaciente_Direccion">Direccion</string>
    <string name="crearPaciente_Edad">Fecha de nacimiento</string>

    <string name="crearReceta_Diagnostico">Diagnóstico</string>
    <string name="crearReceta_Medicamento">Medicamentos</string>
    <string name="crearReceta_Indicaciones">Indicaciones</string>
    <string name="crearReceta_Firma">Firma de médico</string>
    <string name="main_Pacientes">Pacientes</string>
    <string name="main_HistorialRecetas">Historial de Recetas</string>
    <string name="main_ListaPacientes">Lista de Pacientes</string>
    <string name="receta_medicamentos">Medicamentos</string>

    <string name="crear_ultima_receta">Última receta</string>
    <string name="action_search">Buscar</string>

    <string name="agregar_diagnostico_hint">Escribir  diagnóstico, Considere 30 caracteres</string>
    <string name="agregar_medicamento_hint">Escribir medicamento, Considere 40 caracteres</string>
    <string name="open_dl">Open</string>
    <string name="close_dl">Close</string>
    <string name="search_hint">Nombre o rut del paciente</string>

    <string name="nombre_medico">nombre</string>
    <string name="titulo_medico">titulo</string>
    <string name="rut_medico">rut</string>
    <string name="direccion_medico">direccion</string>


    <string-array name="sexo_paciente">
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="creaMedico_Nombre">Nombre:</string>
    <string name="crearMedico_rut">Rut:</string>
    <string name="crearMedico_titulo">Título:</string>
    <string name="creaMedico_direccion">Dirección de oficina:</string>
    <string name="preferencias_medico">sp_medico</string>
</resources>