<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
<<<<<<< HEAD
        android:id="@+id/action_generar_receta"
        android:icon="@drawable/ic_description_black_24dp"
        android:orderInCategory="1"
        android:title="@string/action_generar_receta" />


    <item
        android:id="@+id/action_eliminar_receta"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="1"
        android:title="@string/action_eliminar_receta"
=======
        android:id="@+id/action_nueva_receta"
        android:icon="@drawable/ic_description_black_24dp"
        android:orderInCategory="1"
        android:title="@string/action_nueva_receta" />

    <item
        android:id="@+id/action_editar_paciente"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="1"
        android:title="@string/action_editar_paciente"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_eliminar_paciente"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="1"
        android:title="@string/action_eliminar_paciente"
>>>>>>> 6ec143f906afef3eacd74aaaaa2ee38c72f4b04f
        app:showAsAction="ifRoom"/>

</menu>