<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_print"
        android:title="@string/action_print"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_print_black_24dp"/>
    <item
        android:id="@+id/action_user_settings"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:orderInCategory="1"
        android:title="@string/action_user_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>