<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="cl.tello_urtubia.medform.EditarPacienteActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/creaPaciente_Nombre"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/campoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/crearPaciente_Edad"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/crearPaciente_Sexo"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/campoFecha"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="DD-MM-YYYY"
            android:inputType="date"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

        <Spinner
            android:id="@+id/crearPaciente_spinnerSexo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/crearPaciente_Direccion"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/campoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="Editar"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClick"/>



</LinearLayout>