<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="cl.tello_urtubia.medform.DatosPacienteActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_datospaciente"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/creaPaciente_Nombre"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/nombrePaciente_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/crearPaciente_Rut"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/rutPaciente_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:id="@+id/sexoPaciente_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/edadPaciente_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/crearPaciente_Direccion"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/direccionPaciente_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/editarPacientebutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:onClick="OptionsSelected"
        android:text="Editar Paciente"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/crearReceta_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:text="@string/main_CrearReceta"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="OptionsSelected"
        android:layout_margin="8dp"/>




</LinearLayout>
