<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="cl.tello_urtubia.medform.MainActivity"
    android:id="@+id/drawer_layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context="cl.tello_urtubia.medform.CrearPacienteActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_crearMedico"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/creaMedico_Nombre"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/campoNombre"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/crearMedico_rut"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/campoRut"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/crearMedico_titulo"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/campoTitulo"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/creaMedico_direccion"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/campoDireccion"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:inputType="text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_margin="32dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:onClick="onClick"
            android:text="Guardar Datos"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_gravity="start"
        android:id="@+id/nav_view">

    </android.support.design.widget.NavigationView>




</android.support.v4.widget.DrawerLayout>
